force-app/main/default/objects/FQS_Campaign_Template__mdt/fields/Applicable_Models__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Models__c</fullName>
    <description>The organizing models this template applies to. Stored as a semicolon-separated string: Seasonal, GivingPrograms, Strategy. Used by FQS_CampaignHierarchyBuilder to filter templates by model. MultiselectPicklist is not supported on CMDT, so this is a Text field with a known value set enforced by convention. WARNING: Uses substring matching in Apex (`LIKE '%model%'`) and Flow (`Contains`) — avoid values that are substrings of one another (e.g., 'Seasonal' vs. future 'SeasonalV2').</description>
    <inlineHelpText>Semicolon-separated list of models for which this template applies. Valid values: Seasonal, GivingPrograms, Strategy. Example: "Seasonal;Strategy". The Apex builder filters using LIKE queries on this field.</inlineHelpText>
    <label>Applicable Models</label>
    <length>255</length>
    <type>Text</type>
</CustomField>