force-app/main/default/objects/FQS_Campaign_Template__mdt/fields/Date_Rule__c.field-meta.xml
<CustomField>
    <fullName>Date_Rule__c</fullName>
    <description>Token consumed by FQS_CampaignHierarchyBuilder to compute concrete StartDate and EndDate for the campaign from the fiscal year window. See the FQS Campaign Hierarchy Setup plan for the full token-to-date-window mapping table.</description>
    <inlineHelpText>Controls how start and end dates are assigned when the campaign is created. Apex expands the token using the org's fiscal year window (topStart/topEnd) detected at flow run time.</inlineHelpText>
    <label>Date Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>full-window</fullName>
            </value>
            <value>
                <fullName>q1</fullName>
            </value>
            <value>
                <fullName>q2</fullName>
            </value>
            <value>
                <fullName>q3</fullName>
            </value>
            <value>
                <fullName>q4</fullName>
            </value>
            <value>
                <fullName>mar-may</fullName>
            </value>
            <value>
                <fullName>sep-nov</fullName>
            </value>
            <value>
                <fullName>nov-dec</fullName>
            </value>
            <value>
                <fullName>may-jun</fullName>
            </value>
            <value>
                <fullName>aug-oct</fullName>
            </value>
            <value>
                <fullName>jan-mar</fullName>
            </value>
            <value>
                <fullName>jul-aug</fullName>
            </value>
            <value>
                <fullName>dec-2-send</fullName>
            </value>
            <value>
                <fullName>dec-28-31</fullName>
            </value>
            <value>
                <fullName>oct-plus-apr</fullName>
            </value>
            <value>
                <fullName>feb</fullName>
            </value>
            <value>
                <fullName>mirrors-parent</fullName>
            </value>
            <value>
                <fullName>evergreen</fullName>
            </value>
            <value>
                <fullName>oct-dec</fullName>
            </value>
            <value>
                <fullName>jul-dec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>