force-app/main/default/objects/FQS_Campaign_Template__mdt/fields/Default_In_Model__c.field-meta.xml
<CustomField>
    <fullName>Default_In_Model__c</fullName>
    <description>Subset of Applicable_Models__c. Models listed here will pre-seed this template as a default row when the setup flow creates campaigns for that model. Stored as a semicolon-separated string. Leave blank for library-only templates. MultiselectPicklist is not supported on CMDT, so this is a Text field with a known value set enforced by convention.</description>
    <inlineHelpText>Semicolon-separated list of models where this template is a pre-seeded default. Leave blank to make this template available only via the library picker. Valid values: Seasonal, GivingPrograms, Strategy.</inlineHelpText>
    <label>Default In Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>