force-app/main/default/objects/FQS_Campaign_Template__mdt/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <description>Display label used by the FQS Campaign Hierarchy Setup flow's tactical picker. Shows "Suggested Name (under Parent Name)" so overlapping tactic names disambiguate at pick-time. Not used for the actual Campaign.Name — see Suggested_Name__c for that.</description>
    <inlineHelpText>The label shown in the campaign-setup flow's Tactical picker. Leave blank on Rollup/Strategy templates and templates that don't need parent disambiguation.</inlineHelpText>
    <label>Display Label</label>
    <length>200</length>
    <type>Text</type>
</CustomField>