force-app/main/default/objects/FQS_Campaign_Template__mdt/fields/Function_Group__c.field-meta.xml
<CustomField>
    <fullName>Function_Group__c</fullName>
    <description>Fundraising function this template belongs to. Used to group rows in the + Add from library picker on Screen 2 of the setup flow, making it easier for admins to find templates by fundraising area.</description>
    <inlineHelpText>Controls which section this template appears in when the admin browses the campaign template library. Choose the primary fundraising function this ask or strategy supports.</inlineHelpText>
    <label>Function Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Solicitation</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>PlannedGiving</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Advocacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>