force-app/main/default/objects/FQS_Campaign_Template__mdt/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Which campaign tier this template creates. Rollup = top-level organizing anchor (year or program). Strategy = mid-tier coordinated set of asks. Ask = individual solicitation. The setup flow and Apex builder use this field to place the created Campaign at the right position in the three-level hierarchy.</description>
    <inlineHelpText>Rollup creates a top-level Campaign (year rollup or evergreen program top). Strategy creates a mid-tier Campaign. Ask creates a leaf-level Campaign linked to a strategy.</inlineHelpText>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rollup</fullName>
            </value>
            <value>
                <fullName>Strategy</fullName>
            </value>
            <value>
                <fullName>Ask</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>