force-app/main/default/objects/FQS_Campaign_Template__mdt/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Author notes about this template. Not surfaced in the setup flow UI — for metadata maintainers only.</description>
    <inlineHelpText>Internal notes about this campaign template. Not shown to admins using the setup flow.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>