force-app/main/default/objects/FQS_Campaign_Template__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Ascending sort order controlling the display sequence of templates within a section of the setup flow's configure-tree screen. Lower numbers appear first.</description>
    <inlineHelpText>Controls the order templates appear in the setup flow. Lower numbers appear first within each level and function group.</inlineHelpText>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>