force-app/main/default/objects/FQS_Campaign_Template__mdt/fields/Suggested_Name__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Name__c</fullName>
    <description>The default Campaign.Name for this template. Supports two placeholder tokens that the setup flow expands at load time: {yearLabel} (e.g. FY26 or CY26) and {yearShort} (e.g. 26). Expansion is done in Apex before campaign insert.</description>
    <inlineHelpText>Template placeholders {yearLabel} and {yearShort} are replaced with the detected fiscal or calendar year before the Campaign is created. Example: Spring Appeal {yearLabel} becomes Spring Appeal FY26.</inlineHelpText>
    <label>Suggested Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>