force-app/main/default/objects/FQS_Campaign_Template__mdt/fields/Template_Key__c.field-meta.xml
<CustomField>
    <fullName>Template_Key__c</fullName>
    <description>Stable kebab-case or underscore slug for this template. Used by FQS_CampaignHierarchyBuilder to look up templates, resolve parent-child links, and persist to the audit CMDT. Must be unique across all FQS_Campaign_Template__mdt records and must not be changed after deployment (it is the programmatic identifier, not the DeveloperName).</description>
    <inlineHelpText>A stable unique identifier for this template used by the Apex builder. Do not change this value after deployment — doing so will break parent-child links in the builder.</inlineHelpText>
    <label>Template Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>